--- a/app/src/main/res/layout/activity_entrance.xml
+++ b/app/src/main/res/layout/activity_entrance.xml
@@ -11,27 +11,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="149dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="8dp"
         android:onClick="chooseLocation"
         android:text="Lokasyonları Görüntüle"
-        app:layout_constraintBottom_toTopOf="@+id/openMap"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.836"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/openMap"
-        android:layout_width="132dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="51dp"
+        android:layout_width="130dp"
+        android:layout_height="98dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:onClick="seeTheMap"
         android:text="Haritayı Görüntüle"
         app:layout_constraintBottom_toTopOf="@+id/favorites"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseLocation" />
 
@@ -39,14 +38,10 @@
         android:id="@+id/favorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="91dp"
-        android:layout_marginBottom="318dp"
+        android:layout_marginBottom="196dp"
         android:onClick="favoriteCarParks"
         android:text="Favorileri Görüntüle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.732"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/openMap" />
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
