--- a/app/src/main/res/layout/favorites_post_class.xml
+++ b/app/src/main/res/layout/favorites_post_class.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="410dp"
     android:layout_height="200dp"
     >
@@ -46,20 +45,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <ToggleButton
         android:id="@+id/favoriteButton"
-        android:layout_width="75dp"
-        android:layout_height="105dp"
+        android:layout_width="59dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/filled_star"
+        android:text="ToggleButton"
+        android:textOff=" "
+        android:textOn=" "
         android:focusable="false"
-        android:text="Favori"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/address"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cpName"
-        app:layout_constraintVertical_bias="0.807" />
+        app:layout_constraintTop_toBottomOf="@+id/cpName" />
 
 </android.support.constraint.ConstraintLayout>
