--- a/app/src/main/res/layout/activity_favorite_car_parks.xml
+++ b/app/src/main/res/layout/activity_favorite_car_parks.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#32FFFF"
+    android:background="#32BDD8"
     tools:context=".FavoriteCarParks">
 
     <android.support.design.widget.AppBarLayout
