--- a/app/src/main/res/layout/activity_locations.xml
+++ b/app/src/main/res/layout/activity_locations.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#32BDD8"
     tools:context=".Locations">
 
     <android.support.design.widget.AppBarLayout
@@ -25,6 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="58dp"
-        android:background="#32BDD8" />
+        android:background="#0032BDD8" />
 
 </android.support.design.widget.CoordinatorLayout>
