--- a/app/src/main/res/layout/favorites_post_class.xml
+++ b/app/src/main/res/layout/favorites_post_class.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="410dp"
     android:layout_height="200dp"
-    >
+    android:background="#32BDD8">
 
     <TextView
         android:id="@+id/cpName"
@@ -12,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="cpName"
-        android:textColor="#161414"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -27,7 +27,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Location"
-        android:textColor="#161414"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/condition"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Condition"
-        android:textColor="#161414"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -53,10 +53,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/filled_star"
+        android:focusable="false"
         android:text="ToggleButton"
         android:textOff=" "
         android:textOn=" "
-        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cpName" />
