--- a/app/src/main/res/layout/activity_entrance.xml
+++ b/app/src/main/res/layout/activity_entrance.xml
@@ -27,8 +27,8 @@
 
     <Button
         android:id="@+id/openMap"
-        android:layout_width="340dp"
-        android:layout_height="72dp"
+        android:layout_width="341dp"
+        android:layout_height="90dp"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="23dp"
@@ -40,6 +40,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/favorites"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseLocation" />
 
