--- a/app/src/main/res/layout/locations_post_class.xml
+++ b/app/src/main/res/layout/locations_post_class.xml
@@ -53,7 +53,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="21dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/unfilled_star"
+        android:background="@drawable/toggle_selector"
         android:focusable="false"
         android:text="ToggleButton"
         android:textOff=" "
