General Commit AvailabilityChecker DataAccess entranceActivity FavoriteCarParks Locations MapsActivity activity_entrance.xml activity_favorite_car_parks.xml activity_locations.xml activity_maps.xml strings.xml AndroidManifest.xml build.gradle parkankara_temporary_logo 10/12/2019 11:11

--- a/app/src/main/res/layout/activity_favorite_car_parks.xml
+++ b/app/src/main/res/layout/activity_favorite_car_parks.xml
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
+        <!--<android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#32BDD8"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
 
     </android.support.design.widget.AppBarLayout>
 
@@ -27,5 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="58dp"
         android:background="#32BDD8" />
+
+    <SearchView
+        android:id="@+id/searchBarFavourites"
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:layoutDirection="rtl" />
 
 </android.support.design.widget.CoordinatorLayout>
