--- a/app/src/main/res/layout/activity_entrance.xml
+++ b/app/src/main/res/layout/activity_entrance.xml
@@ -10,71 +10,63 @@
     <Button
         android:id="@+id/chooseLocation"
         android:layout_width="340dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="24dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="40dp"
         android:background="#41FFFFFF"
         android:fontFamily="@font/baloo"
         android:onClick="chooseLocation"
-        android:text="Lokasyon Seç"
+        android:text="Otoparklar"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/openMap"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/openMap"
-        android:layout_width="341dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="23dp"
+        android:layout_width="340dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="30dp"
         android:background="#4BFFFFFF"
         android:fontFamily="@font/baloo"
         android:onClick="seeTheMap"
-        android:text="Haritada Görüntüle"
+        android:text="HARİTA"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/favorites"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseLocation" />
 
     <Button
         android:id="@+id/favorites"
         android:layout_width="340dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="33dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="30dp"
         android:background="#45FFFFFF"
         android:fontFamily="@font/baloo"
         android:onClick="favoriteCarParks"
-        android:text="Favori Otoparklar"
+        android:text="@string/Favoriler"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/openMap" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="113dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginBottom="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/chooseLocation"
+        android:layout_height="160dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo00000" />
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/imageView3"
         android:layout_width="188dp"
         android:layout_height="0dp"
@@ -83,6 +75,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorites"
-        app:srcCompat="@drawable/hitit111" />
+        app:srcCompat="@drawable/hitit111" />-->
 
 </android.support.constraint.ConstraintLayout>
